# GeminiWatermarkTool

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
src/: main.cpp
src/cli/: cli_app.cpp
src/core/: watermark_engine.cpp
src/gui/app/: app_controller.cpp  app_state.hpp
src/gui/widgets/: main_window.cpp
src/utils/: path_formatter.hpp
